Show nodes in web console greeting

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     }, {
         prompt: '>',
         name: 'clusterman',
-        greetings: 'Welcome to clusterman web console!'
+        greetings: 'Welcome to clusterman web console!\nNodes in the cluster: {{ connected_nodes }}\nType a command to execute on the cluster.'
     });
 </script>
 </body>
